--- a/render.yaml
+++ b/render.yaml
@@ -4,4 +4,6 @@ services:
     env: python
     plan: free
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn -k uvicorn.workers.UvicornWorker main:app
+    # startCommand: gunicorn -k uvicorn.workers.UvicornWorker main:app
+    startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
+
